--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".GameActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
-            android:screenOrientation="landscape"
-            >
+            android:screenOrientation="landscape" />
+        <activity android:name=".Splash"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,10 +21,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FullscreenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_fullscreen"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:name=".MainActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".HighScores"></activity>
     </application>
 
 </manifest>
