--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nerdyapps.balloonpop">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +13,7 @@
             android:name=".GameActivity"
             android:configChanges="keyboardHidden|screenSize|orientation"
             android:screenOrientation="landscape" />
-        <activity android:name=".Splash"
+        <activity android:name=".Splash" android:noHistory="true"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +24,8 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".HighScores"></activity>
+        <activity android:name=".HighScores"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
